--- a/composer.json
+++ b/composer.json
@@ -43,8 +43,7 @@
             "App\\": "app/"
         },
         "classmap": [
-            "database/seeds",
-            "database/factories"
+            "database/seeds"
         ],
         "files": [
             "app/Helpers/Helper.php"
