--- a/.env
+++ b/.env
@@ -11,8 +11,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=kkp_fahri
-DB_USERNAME=bagas
-DB_PASSWORD=bagas123
+DB_USERNAME=root
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
